@@ -190,6 +190,26 @@ void ARMRaiseSWI(struct ARMCore* cpu) {
 	cpu->cycles += currentCycles;
 }
 
+void ARMRaiseUndefined(struct ARMCore* cpu) {
+	union PSR cpsr = cpu->cpsr;
+	int instructionWidth;
+	if (cpu->executionMode == MODE_THUMB) {
+		instructionWidth = WORD_SIZE_THUMB;
+	} else {
+		instructionWidth = WORD_SIZE_ARM;
+	}
+	ARMSetPrivilegeMode(cpu, MODE_UNDEFINED);
+	cpu->cpsr.priv = MODE_UNDEFINED;
+	cpu->gprs[ARM_LR] = cpu->gprs[ARM_PC] - instructionWidth;
+	cpu->gprs[ARM_PC] = BASE_UNDEF;
+	int currentCycles = 0;
+	ARM_WRITE_PC;
+	_ARMSetMode(cpu, MODE_ARM);
+	cpu->spsr = cpsr;
+	cpu->cpsr.i = 1;
+	cpu->cycles += currentCycles;
+}
+
 static inline void ARMStep(struct ARMCore* cpu) {
 	uint32_t opcode = cpu->prefetch[0];
 	cpu->prefetch[0] = cpu->prefetch[1];
